* Use open-rewrite to migrate from JDK8 to JDK11 (#453)
* Use open-rewrite to migrate from JDK8 to JDK11
* Update release notes
* Update github workflows to use JDK11